// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`steppedListCard > should hide the toggle button 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0;
}

.emotion-2 {
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-6:active {
  text-decoration-thickness: 2px;
}

.emotion-12 {
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-14 {
  margin-bottom: 1.5rem;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52uj uv_toi52u5d"
    >
      <div
        class="uv_x6hyh50 "
        style="--uv_3mg8xe0: 9fr 1fr; --uv_3mg8xe1: 9fr 1fr; --uv_3mg8xe2: 9fr 1fr; --uv_3mg8xe3: 9fr 1fr; --uv_3mg8xe4: 9fr 1fr; --uv_3mg8xe5: 9fr 1fr;"
      >
        <h1>
          Header
        </h1>
      </div>
      <div
        class="emotion-0 emotion-1 uv_1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50 "
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52up uv_toi52u5d"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="emotion-4 emotion-5 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m01 uv_1jy42m0d uv_1jy42m0m"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-4 emotion-5 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m01 uv_1jy42m0c uv_1jy42m0h"
                >
                  2
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-12 emotion-13 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-16 emotion-17"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with custom hide action 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0;
}

.emotion-2 {
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-6:active {
  text-decoration-thickness: 2px;
}

.emotion-12 {
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-14 {
  margin-bottom: 1.5rem;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52uj uv_toi52u5d"
    >
      <div
        class="uv_x6hyh50 "
        style="--uv_3mg8xe0: 9fr 1fr; --uv_3mg8xe1: 9fr 1fr; --uv_3mg8xe2: 9fr 1fr; --uv_3mg8xe3: 9fr 1fr; --uv_3mg8xe4: 9fr 1fr; --uv_3mg8xe5: 9fr 1fr;"
      >
        <h3
          class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow11 uv_m4c9ow1b uv_m4c9ow3c"
        >
          Header
        </h3>
        <button
          class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="emotion-0 emotion-1 uv_1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50 "
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52up uv_toi52u5d"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="emotion-4 emotion-5 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m01 uv_1jy42m0d uv_1jy42m0m"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-4 emotion-5 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m01 uv_1jy42m0c uv_1jy42m0h"
                >
                  2
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-12 emotion-13 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <h1>
                First step
              </h1>
            </div>
            Description
            <div
              class="emotion-16 emotion-17"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0;
}

.emotion-2 {
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-6:active {
  text-decoration-thickness: 2px;
}

.emotion-12 {
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-14 {
  margin-bottom: 1.5rem;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52uj uv_toi52u5d"
    >
      <div
        class="uv_x6hyh50 "
        style="--uv_3mg8xe0: 9fr 1fr; --uv_3mg8xe1: 9fr 1fr; --uv_3mg8xe2: 9fr 1fr; --uv_3mg8xe3: 9fr 1fr; --uv_3mg8xe4: 9fr 1fr; --uv_3mg8xe5: 9fr 1fr;"
      >
        <h1>
          Header
        </h1>
        <div
          aria-controls="«r0»"
          aria-describedby="«r0»"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <button
            class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
            type="button"
          >
            hide button
          </button>
        </div>
      </div>
      <div
        class="emotion-0 emotion-1 uv_1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50 "
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52up uv_toi52u5d"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="emotion-4 emotion-5 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m01 uv_1jy42m0d uv_1jy42m0m"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-4 emotion-5 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m01 uv_1jy42m0c uv_1jy42m0h"
                >
                  2
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-12 emotion-13 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-16 emotion-17"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with pre-completed step 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0;
}

.emotion-0 {
  padding: 0;
}

.emotion-2 {
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-2 {
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-6:active {
  text-decoration-thickness: 2px;
}

.emotion-6 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-6:active {
  text-decoration-thickness: 2px;
}

.emotion-12 {
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-12 {
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-14 {
  margin-bottom: 1.5rem;
}

.emotion-14 {
  margin-bottom: 1.5rem;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52uj uv_toi52u5d"
    >
      <div
        class="uv_x6hyh50 "
        style="--uv_3mg8xe0: 9fr 1fr; --uv_3mg8xe1: 9fr 1fr; --uv_3mg8xe2: 9fr 1fr; --uv_3mg8xe3: 9fr 1fr; --uv_3mg8xe4: 9fr 1fr; --uv_3mg8xe5: 9fr 1fr;"
      >
        <h1>
          Header
        </h1>
        <button
          class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="emotion-0 emotion-1 uv_1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50 "
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52up uv_toi52u5d"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="emotion-4 emotion-5 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m01 uv_1jy42m0d uv_1jy42m0m"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-4 emotion-5 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m01 uv_1jy42m0c uv_1jy42m0f"
                >
                  <svg
                    class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
                    />
                  </svg>
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-12 emotion-13 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-16 emotion-17"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
